# goals-scenario

./: .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  codecov.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml  on-release-main.yml
cli/: index.html
docs/: cli.md  hooks.py  index.md  indicators.md  reference.md
images/: goals_scenario_architecture.drawio
indicators/: index.html
reference/: index.html
scripts/: update_pjnz_import_code.py
search/: search_index.json
src/avenir_goals_scenario/: __init__.py  cli.py  runner.py  scenarios.py
src/avenir_goals_scenario/_cli/: cli_utils.py
src/avenir_goals_scenario/_const/HV/: HVConst.py  HVTags.py
src/avenir_goals_scenario/_const/RN/: RNTags.py
src/avenir_goals_scenario/_import/HV/: ImportHV.py
src/avenir_goals_scenario/_import/RN/: ImportRN.py
src/avenir_goals_scenario/_leapfrog/: LeapfrogDataMapping.py
src/avenir_goals_scenario/_runner/: indicator_dims.py  output.py  pjnz.py  simulation.py  utils.py  worker_utils.py
src/avenir_goals_scenario/_scenario_generator/: scenario_generator.py
src/avenir_goals_scenario/_scenario_generator/models/: __init__.py  scenario_definition.py  scenario_simulations.py
src/avenir_goals_scenario/models/: __init__.py  run_config.py  scenario_definition.py  scenario_simulations.py
src/const/RN/: RNConst.py
src/goals_sa/: __init__.py  cli.py  runner.py  scenarios.py
src/goals_sa/_leapfrog/: LeapfrogDataMapping.py
src/import/DP/: ImportDP.py
src/import/RN/: ImportRN.py
tests/: conftest.py  scenario_csv.py  test_cli.py  test_import.py  test_runner.py  test_scenario_generator.py  test_scenarios.py
tests/integration/: test_goals_scenario.py
tests/test_data/: Botswana.PJNZ  Ethiopia.PJNZ  scenario_descriptions.csv
tests/test_data/pjnz/: DRC.PJNZ  Ghana.PJNZ  Zimbabwe.PJNZ
tests/unit/: test_cli.py  test_cli_utils.py  test_import.py  test_output.py  test_runner.py  test_scenario_generator.py  test_scenarios.py
