[project]
name = "avenir-goals-scenario"
version = "0.0.3"
description = "Goals scenario analysis"
authors = [{ name = "Rob Ashton", email = "rashton@avenirhealth.org" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "orjson>=3.11.7",
    "cryptography>=46.0.7",
    "avenir-spectrum-import-pjnz>=0.1.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
goals-scenario = "avenir_goals_scenario.cli:main"

[project.urls]
Homepage = "https://avenirhealth-org.github.io/goals-scenario/"
Repository = "https://github.com/avenirhealth-org/goals-scenario"
Documentation = "https://avenirhealth-org.github.io/goals-scenario/"

[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "gitpython>=3.1",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "tox-uv>=1.33.4",
    "ty>=0.0.23",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
    "pip-audit>=2.10.0",
]

[tool.ty.environment]
python = "./.venv"
python-version = "3.10"

[tool.ty.src]
exclude = [
    "src/avenir_goals_scenario/_const",
    "src/avenir_goals_scenario/_import",
    "src/avenir_goals_scenario/_leapfrog"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
# Exclude vendored SpectrumEngine directories
exclude = [
    "src/avenir_goals_scenario/_const",
    "src/avenir_goals_scenario/_import",
    "src/avenir_goals_scenario/_leapfrog"
]

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/*" = ["S607"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
